tests/macro-tests/cases/widget_new/malformed_property_path3.stderr
error: expected `;`
 --> cases/widget_new/malformed_property_path3.rs:7:20
  |
7 |         zng::layout:margin = 0;
  |                    ^

error[E0425]: cannot find function `layout` in module `zng::layout`
 --> cases/widget_new/malformed_property_path3.rs:7:14
  |
7 |         zng::layout:margin = 0;
  |              ^^^^^^ help: a unit struct with a similar name exists: `LAYOUT`
  |
 ::: $WORKSPACE/crates/zng-layout/src/context.rs
  |
  | pub struct LAYOUT;
  | ----------------- similarly named unit struct `LAYOUT` defined here

error[E0425]: cannot find value `layout` in this scope
 --> cases/widget_new/malformed_property_path3.rs:7:14
  |
7 |         zng::layout:margin = 0;
  |              ^^^^^^ not found in this scope

error[E0599]: no method named `margin` found for mutable reference `&mut Wgt` in the current scope
 --> cases/widget_new/malformed_property_path3.rs:7:21
  |
7 |         zng::layout:margin = 0;
  |                     ^^^^^^ method not found in `&mut Wgt`
  |
  = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `margin` are implemented but not in scope; perhaps you want to import one of them
  |
1 + use zng::layout::margin;
  |
1 + use zng::rule_line::hr::margin;
  |
1 + use zng::rule_line::vr::margin;
  |
